cabal-version: 1.12

name:           hs-utils
version:        0.2.0.0
description:    Please see the README on GitHub at <https://github.com/lillycat332/hs-utils#readme>
homepage:       https://github.com/lillycat332/hs-utils#readme
bug-reports:    https://github.com/lillycat332/hs-utils/issues
author:         Lilly Cham
maintainer:     lilly@lillycat.tech
copyright:      2022 Lilly Cham
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/hs-utils

library
  exposed-modules:
      Lib
  other-modules:
      Paths_hs_utils
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable ls
  main-is: Ls.hs
  other-modules:
      Paths_hs_utils
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hs-utils
    , directory
    , optparse-applicative
  default-language: Haskell2010

executable Cat
  main-is: Cat.hs
  other-modules:
      Paths_hs_utils
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hs-utils
    , directory
  default-language: Haskell2010

test-suite hs-utils-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hs_utils
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hs-utils
  default-language: Haskell2010
